fixed hero display box on smaller screens, adjusted movie panel text size, improved synopsis area, improved on calc function for booking area

--- a/a3/style.css
+++ b/a3/style.css
@@ -151,14 +151,15 @@ nav a:hover {
 .hero-text {
   color: #fff;
   background-color: hsla(360, 100%, 0%, 0.75);
-  width: 80%;
+  width: 90%;
   border-radius: 8px;
   top: 60%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
-  padding: 20px;
+  padding: 2%;
   font-size: 40px;
+  box-sizing: border-box;
 }
 
 .hero-text h1 {
@@ -252,6 +253,7 @@ nav a:hover {
 /* NOW SHOWING SECTION */
 #now-showing {
   background: url('../../media/5-dots.png');
+  padding: 6% 1%;
 }
 
 #now-showing>h1 {
@@ -268,16 +270,10 @@ nav a:hover {
 .synopsis ul {
   padding: 0;
   text-align: center;
-  margin: auto;
 }
 
 .synopsis ul li {
   display: inline-block;
-  background-color: #FF3B3F;
-  color: #FFF;
-  padding: 10px;
-  margin: 1% auto;
-  border-radius: 18px;
 }
 
 footer {
@@ -329,11 +325,10 @@ footer a {
     justify-content: space-around;
   }
 
-  .grid-box {
+  .booking-grid {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
   }
-
 }
 
 /* WHEN THE SCREEN IS BIGGER THAN THIS NUMBER*/
@@ -378,11 +373,6 @@ footer a {
     width: auto;
   }
 
-  .synopsis iframe {
-    width: 560px;
-    height: 315px;
-  }
-
   .price-box {
     border-radius: 8px 8px 18px 18px;
   }
@@ -395,7 +385,7 @@ footer a {
     grid-template-columns: auto auto auto auto;
   }
 
-  .grid-box {
+  .booking-grid {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
   }
@@ -405,10 +395,24 @@ footer a {
     grid-template-columns: auto auto;
   }
 
+  .synopsis iframe {
+    min-width: 500px;
+  }
+
+  .booking-grid>:first-child{order:1;
+  }
+  .booking-grid>:nth-child(2){order:3;
+  }
+  .booking-grid>:nth-child(3){order:2;
+  }
+  .booking-grid>:nth-child(4){order:4;
+  }
 }
 
 /* ---------------------------------------------------------------------------- */
-.grid-box {
+.booking-grid {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 18px;
   display: grid;
   grid-template-rows: auto auto auto auto;
   background: url('../../media/dust_scratches.png');
@@ -430,20 +434,15 @@ select {
   display: block;
 }
 
-input[pattern]:invalid {
-  color: red;
-}
 
-button {
+button, input[type=submit] {
   font-size: 18px;
   font-family: 'Tajawal', sans-serif;
   border-style: none;
   padding: 4px 20px;
   margin: 2% 0;
-
   background-color: #FF3B3F;
   color: #FFF;
-
   border-radius: 18px;
 }
 
@@ -451,10 +450,8 @@ button:focus {
   outline: 0;
 }
 
-button:active{
-
-  background-color  : #b2292c;
-
+button:active {
+  background-color: #b2292c;
 }
 
 .synopsis-tabs {
@@ -505,7 +502,7 @@ button:active{
   color: white;
   font-size: 16px;
   position: absolute;
-  bottom: 20%;
+  bottom: 25%;
   text-align: center;
 }
 
@@ -516,7 +513,7 @@ button:active{
 
 .ml li {
   display: inline-block;
-  padding: 10px;
+  padding: 1%;
   color: #FFF;
   font-family: 'Tajawal', sans-serif;
 }
@@ -527,11 +524,9 @@ button:active{
 
 #booking-section {
   display: none;
+    background: url("../../media/dust_scratches.png");
 }
 
-input {
-  display: block;
-}
 
 .synopsis-container {
   padding: 3%;
@@ -552,14 +547,25 @@ input {
   height: 300px;
 }
 
-fieldset {
-  font-size: 18px;
-  font-family: 'Tajawal', sans-serif;
-}
+select
+{
+  display: inline-block;
+
+padding: 4px 20px;
+font-size: 18px;
+border:0;
+
+border-radius: 4px;
+font-family: 'Tajawal', sans-serif;}
 
 fieldset>input {
-  border: 1px solid #FF3B3F;
-  border-radius: 18px;
+  font-size: 18px;
+  font-family: 'Tajawal', sans-serif;
+  margin: auto;
+  padding: 6px 10px;
+  border-radius: 4px;
+  border:0;
+
 }
 
 .now-showing-grid {
@@ -575,12 +581,18 @@ fieldset>input {
 }
 
 .booking-movie-details {
-  background: url("../../media/dust_scratches.png");
   text-align: center;
   font-size: 18px;
   font-family: 'Tajawal', sans-serif;
 }
 
-#now-showing {
-  padding: 1%;
+.synopsis iframe {
+  width: 100%;
+}
+
+#booking-day, #booking-hour {
+  display: inline;
+}
+
+.booking-grid>:nth-child(3)>input{display: block;
 }
